# concurro

./: .gitignore  .gitmodules  BusyThreadReadBuffer.h  BusyThreadWriteBuffer.h  CMakeLists.txt  Concurrenc++.vcproj  ConnectionFactory.cpp  ConnectionFactory.h  ConnectionPars.cpp  ConnectionPars.h  IPv4SocketAddress.cpp  IPv4SocketAddress.h  IPv6SocketAddress.cpp  IPv6SocketAddress.h  Logging.cpp  Logging.h  NamedPipe.cpp  NamedPipe.h  RClientSocketAddress.cpp  RClientSocketAddress.h  RConnectedSocket.cpp  RConnectedSocket.h  RConnection.cpp  RConnection.h  README  RInOutSocket.cpp  RInOutSocket.h  RListeningSocket.cpp  RListeningSocket.h  RMultiprotoSocketAddress.cpp  RServerSocketAddress.cpp  RServerSocketAddress.h  RSingleSocket.cpp  RSingleSocket.h  RSingleprotoSocketAddress.h  RSocket.cpp  RSocket.h  RSocketAddress.cpp  RSocketAddress.h  RSocketGroup.cpp  (+29 more)
C++/: AbstractConnection.cpp  AbstractConnection.h  AutoRepository.h  AutoRepository.hpp  BusyThreadReadBuffer.h  BusyThreadWriteBuffer.h  CMakeLists.txt  ClassWithStates.h  ClassWithStates.hpp  ClientSocket.cpp  ClientSocket.h  ClientSocketConnector.cpp  ClientSocketConnector.h  ConnectionFactory.h  ConnectionPars.h  ConnectionRepository.h  ConstructibleObject.cpp  ConstructibleObject.h  Enum.cpp  Enum.h  Event.cpp  Event.h  Existent.cpp  Existent.h  Existent.hpp  Guard.cpp  Guard.h  HasStringView.cpp  HasStringView.h  IPv4SocketAddress.cpp  IPv4SocketAddress.h  IPv6SocketAddress.cpp  IPv6SocketAddress.h  InSocket.cpp  InSocket.h  ListeningSocket.cpp  ListeningSocket.h  Logger.cpp  Logger.h  Logging.cpp  (+116 more)
C++/PEvents/: .gitignore
C++/hardcore/: stack.cpp  stack.hpp
C++/hardcore/tests/: stack  stack.cpp  stack.s
C++/tests/: .gitignore  CMakeLists.txt  ClassWithStatesCU.cpp  EventCU.cpp  ExistentCU.cpp  ProcessCU.cpp  RBufferCU.cpp  RConnectionCU.cpp  REventCU.cpp  RHolderCU.cpp  RMutexCU.cpp  RSignalCU.cpp  RSocketCU.cpp  RStateCU.cpp  RThreadCU.cpp  RWindowCU.cpp  RepositoryCU.cpp  SCommonCU.cpp  SSingletonCU.cpp  eat_tread.sh  last_thread_state.sh  log.cpp  log.h  search_waits.awk  search_waits.sh  state_objects.h  tests.cpp  tests.h
C++/tests/CUnit/CUnit/: CMakeLists.txt
CUnit/: CMakeLists.txt
doc/: Doxyfile  concurrent.texi
doc/UML/: Concurrent.mdl  concurrent.vpp
